fixing genre selector overlap problem

--- a/src/app/component-modules/home/components/home.component.scss
+++ b/src/app/component-modules/home/components/home.component.scss
@@ -18,6 +18,7 @@
   height: 26px;
   display: flex;
   justify-content: space-between;
+  z-index: 1;
 }
 
 .search-filter {
@@ -152,7 +153,6 @@
   font-weight: 500;
   position: sticky;
   top: 30px;
-  z-index: -1;
 }
 
 .activity-name {
